resources/sass/styles.scss
/* ... */
.header-img-width{
    width: 6rem;
}
.header-section {
    display: none;
    position: absolute;
    margin-top: 3rem;
    width: 100%;
    z-index: 1000;
    /*border: 1px solid black;*/
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1000;
}
.header-section section{
    width: 100%;
}
.header-section option{
    background: #4974cc;
    color: #FFF;
    width: 100%;
}
.header-section option:hover{
    background: #4267b2;
}
.header-menu-hover:hover + .header-section{
    display: block;
}
.header-section:hover{
    display: block;
}

.header-navigation {
    transition: 0.4s ease;
}

.header-navigation:hover {
    background-color: #4974cc;
    transition: 0.4s ease;
}

.white-logo-contain{
    width: 230px;
}
.main_margin{
    margin: 0 9rem;
}
.main_margin1{
    margin: 0;
}
.flex-row{
    display: flex;
    flex-flow: row;
    justify-content: center;
}
/*Конец стилей страницы входа*/
/*Начало главной страницы новостей*/
.header{
    background: #4267b2;
}
.header-ul a{
    padding: 1rem;
}
.header-ul li{
    color: white;
}
.small-avatar-circle-width{
    width: 40px;
    height: 40px;
}
.mobile-medium-avatar-circle-width {
    width: 70px;
    height: 70px;
}
.height100vh{
    height: auto;
}
.small-avatar-circle{
    border-radius: 50%;
}
.header-avatar-contain{
    background: #4974cc;
    border-radius: 10px;
}
.header-avatar-nickname{
    color: white;
}
.footer{
    background: #d0d0d0;
}
.social-spacing-contain{
    width: 30%;
    margin: 0 auto;
}
.social-spacing{
    margin: 0 2rem;
}
.footer-fonts{
    font-size: 0.8em;
}
.kupipolis_mail{
    color: #4267b2;
    font-size: 1.8em;
    text-decoration: underline;
}
.kupipolis_mail:hover{
    text-decoration: underline !important;
}
.kupipolis_main-child-text{
    color: #595959;
    font-family: sans-serif;
}
/*Конец главной страницы новостей*/
/*Начало стилей Алихана*/
/*----------Specifications----------*/
*, *::before, *::after {
    box-sizing: border-box;
}

body {
    font-family: 'Roboto Condensed', sans-serif;
    margin: 0;
    padding: 0;
    min-height: 100vh;
}

.container-fluid {
    /* border: 1px solid yellow; */
    max-width: 85% !important;
    margin: 0 auto !important;
    padding: 0 !important;
}

/*----------Main----------*/
.main {
    height: 100vh;
    min-height: 600px;
    background: url('../images/background.png') no-repeat center;
    background-size: cover;
}


/*----------Header----------*/
.header-login {
    padding-top: 70px;
    /* border: 1px solid white; */
}

.logo {
    height: 4em;
    /* border: 1px solid red; */
}

/*----------Content's First-Column----------*/
.title {
    padding-top: 200px;
}

.title__welcome, .title__main {
    display: block;
    color: #fff;
    text-align: center;
}

.title__welcome {
    font-size: 0.7em;
}

.title__main {
    font-size: 2.5em;
}

.social {
    text-align: center;
    margin-top: 60px;
}

.social__title {
    color: #fff;
    font-size: 1.3em;
}

.social__icons {
    margin-top: 10px;
}

.social__link {
    margin-right: 50px;
}

.social__link:last-child {
    margin-right: 0;
}

.fa-login {
    font-size: 3.4em;
    color: #FFF;
    transition: 0.4s ease;
}

.fa-instagram:hover {
    /* color: #8A3AB9; */
    /* background: #d6249f;
    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent; */
    color: transparent;
    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
    background: -webkit-radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
    background-clip: text;
    -webkit-background-clip: text;
    transition: 0.4s ease;
}

.fa-facebook-square:hover {
    color: #3B5998;
    transition: 0.4s ease;
}

.fa-youtube-play:hover {
    color: #FF0000;
    transition: 0.4s ease;
}

/*----------Content's Second Column----------*/
.users {
    margin-top: 40px;
    /* border: 1px solid red; */
}
.users__image {
    height: 10em;
    /* border: 1px solid white; */
}

.input-container {
    margin-top: 30px;
    position: relative;
    /* border: 1px solid red; */
}

.fa-input {
    font-size: 2.2em;
    position: absolute;
    color: grey;
    bottom: 8px;
    /* left: 180px; */
    left: 5.1em;
}

.show {
    border: none;
    outline: none !important;
    /*position: absolute;*/
    right: 170px;
    bottom: 6.5px;
    display: inline;
    background: none;
}

.right-sidebar-blocks{
    word-break: break-word;
}

.fa-eye-login {
    font-size: 2.2em;
    color: grey;
}

.input-field {
    height: 50px;
    width: 60%;
    max-width: 60%;
    /* padding-left: 80px; */
    padding-left: 4.2em;
    padding-right: 5em;
}

.btn-block {
    margin-top: 85px;
    height: 50px;
    max-width: 60%;
    background-color: rgba(83, 49, 206, 0.801);
    border: none;
    box-shadow: 0 0 5px rgba(0, 0,0, 0.5);
    outline: none !important;
    transition: 0.4s ease;
    color: #fff;
}

.btn-block:hover {
    background-color: rgba(72, 37, 212, 1);
    transition: 0.4s ease;
    color: #000;
}

/*----------Footer----------*/
.login-footer {
    margin-top: 200px;
}

.footer__title {
    display: block;
    text-transform: uppercase;
    color: #FFF;
}

.date-width {
    height: 45px;
}

/* ------------Nedia queries --------*/
@media screen and (max-width: 960px) {

}

.btn.aqua-gradient {
    transition: .5s ease;
    color: #fff;
}

.btn.btn-sm {
    padding: .5rem 1.6rem;
    font-size: .64rem;
}

.aqua-gradient {
    background: linear-gradient(40deg,#2096ff,#05ffa3)!important;
}

.btn-group-sm>.btn, .btn-sm {
    padding: .25rem .5rem;
    font-size: .875rem;
    line-height: 1.5;
    border-radius: .2rem;
}

.btn-rounded {
    border-radius: 10em;
}

.rating {
    display: inline-block;
    align-self: flex-end;
}

.centcoin {
    width: 3.8rem;
}

.width80 {
    width: 80%;
}
/* ... */

